Implementing the required akka component for the flight training scheduler.